update : データベースの中身をhtmlに反映

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
       ><strong>プログラミングチュートリアル</strong>
     </nav>
     <section>
-      <dev class="container">{% block content %}{$ endblock %}</dev>
+      <dev class="container">{% block content %}{% endblock %}</dev>
     </section>
   </body>
 </html>
