--- a/blog/templates/blog/frontpage.html
+++ b/blog/templates/blog/frontpage.html
@@ -1,1 +1,8 @@
-{% extends "blog/base.html"}
+{% extends "blog/base.html" %} {%block content%} {% for post in posts %}
+<div class="post block">
+  <h2 class="subtitle"></h2>
+  {{post.title}}<small>Posted at {{post.posted_date}}</small>
+  <p>{{post.intro}}</p>
+  <hr />
+</div>
+{% endfor %} {% endblock %}
