update : post_detail.htmlを追加

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,10 +11,13 @@
   </head>
   <body>
     <nav class="navbar is-danger">
-      <a href="/" class="navbar-item"></a
-      ><strong>プログラミングチュートリアル</strong>
+      <div class="navbar-brand">
+        <a href="/" class="navbar-item"
+          ><strong>プログラミングチュートリアル</strong></a
+        >
+      </div>
     </nav>
-    <section>
+    <section class="section">
       <dev class="container">{% block content %}{% endblock %}</dev>
     </section>
   </body>
