--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,8 +1,9 @@
-{% extends "blog/base.html" %} {%block content%} {% for post in posts %}
-<div class="post block">
-  <h2 class="subtitle"></h2>
-  {{post.title}}<small>Posted at {{post.posted_date}}</small>
-  <p>{{post.intro}}</p>
-  <hr />
-</div>
-{% endfor %} {% endblock %}
+{% extends "blog/base.html" %} {%block content%}
+
+<h1 class="title">{{post.title}}</h1>
+<small>Posted at {{post.posted_date}}</small>
+<p>{{post.intro}}</p>
+<p>{{post.body}}</p>
+<hr />
+
+{% endblock %}
