--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,4 +6,13 @@
 <p>{{post.body}}</p>
 <hr />
 
+<h2 class="subtitle">コメントを追加</h2>
+<form action="" ,method="post">
+  {% csrf_token %}
+  <div class="field">
+    <div class="control">
+      <button class="button is-danger">送信</button>
+    </div>
+  </div>
+</form>
 {% endblock %}
