--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,8 +7,8 @@
 <hr />
 
 <h2 class="subtitle">コメントを追加</h2>
-<form action="" ,method="post">
-  {% csrf_token %}
+<form action="" method="post">
+  {% csrf_token %} {{form.as_p}}
   <div class="field">
     <div class="control">
       <button class="button is-danger">送信</button>
